--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE opacity>
 	<head>
 		<meta charset="utf-8">
 		<title>Title</title>
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Headline</h1>
+			<h1>opacity</h1>
 		</header>
 			<section id="content">
 				<canvas id="Reference_Opacity" data-processing-sources="Reference_Opacity.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    opacity
 	    </footer>
 	</body>
 </html>
