--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE opacity>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>opacity</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    opacity
+		    mouse to fix the circle
 	    </footer>
 	</body>
 </html>
